--- a/entre-agora/index.html
+++ b/entre-agora/index.html
@@ -107,6 +107,11 @@
             padding-top: 15px;
             border-top: 1px solid #eee;
         }
+        @media screen and (max-width: 768px) {
+          .container {
+            margin-top:0px;
+            border-radius: 0px;
+          }
     </style>
 </head>
 <body>
