--- a/entre-ja/index.html
+++ b/entre-ja/index.html
@@ -67,6 +67,11 @@
             color: #666;
             margin-top: 30px;
         }
+        @media screen and (max-width: 768px) {
+          .container {
+            margin-top:0px;
+            border-radius: 0px;
+          }
     </style>
 </head>
 <body>
