--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 <body>
     <div class="container">
         <div class="hero-image">
-            <a href="https://t.me/seugrupo_de_apostas" class="cta-button1">
+            <a href="https://chat.whatsapp.com/IOtlCvscfJbIGcX3WcSna0?mode=ac_t" class="cta-button1">
                 <span>CLIQUE AQUI E ENTRE NO GRUPO</span>
             </a>
             <div id="img" alt="Logo"></div>
@@ -376,7 +376,7 @@
                 </div>
             </div>
             
-            <a href="https://t.me/seugrupo_de_apostas" class="cta-button">
+            <a href="https://chat.whatsapp.com/IOtlCvscfJbIGcX3WcSna0?mode=ac_t" class="cta-button">
                 <span><i class="fab fa-telegram"></i> ENTRAR NO GRUPO AGORA</span>
             </a>
             
