--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 <body>
     <div class="container">
         <div class="hero-image">
-            <a href="https://chat.whatsapp.com/IOtlCvscfJbIGcX3WcSna0?mode=ac_t" class="cta-button1">
+            <a href="https://chat.whatsapp.com/Br49oe6ukE0KGBU98Pu0zV?mode=ems_copy_c" class="cta-button1">
                 <span>CLIQUE AQUI E ENTRE NO GRUPO</span>
             </a>
             <div id="img" alt="Logo"></div>
@@ -389,7 +389,7 @@
                 </div>
             </div>
             
-            <a href="https://chat.whatsapp.com/IOtlCvscfJbIGcX3WcSna0?mode=ac_t" class="cta-button">
+            <a href="https://chat.whatsapp.com/Br49oe6ukE0KGBU98Pu0zV?mode=ems_copy_c" class="cta-button">
                 <span><i class="fab fa-telegram"></i> ENTRAR NO GRUPO AGORA</span>
             </a>
             
