--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 <body>
     <div class="container">
         <div class="hero-image">
-            <a href="https://chat.whatsapp.com/FPRvgklMkjB26aN3RrY7YG?mode=ems_share_t" class="cta-button1">
+            <a href="https://chat.whatsapp.com/EO3V0SAENnI2lYZbyo8Eit?mode=ems_copy_t" class="cta-button1">
                 <span>CLIQUE AQUI E ENTRE NO GRUPO</span>
             </a>
             <div id="img" alt="Logo"></div>
@@ -389,7 +389,7 @@
                 </div>
             </div>
             
-            <a href="https://chat.whatsapp.com/FPRvgklMkjB26aN3RrY7YG?mode=ems_share_t" class="cta-button">
+            <a href="https://chat.whatsapp.com/EO3V0SAENnI2lYZbyo8Eit?mode=ems_copy_t" class="cta-button">
                 <span><i class="fab fa-telegram"></i> ENTRAR NO GRUPO AGORA</span>
             </a>
             
